2014-02-14  Chung-Ju Wu  <jasonwucj@gmail.com>

	* config/nds32/nds32.c (nds32_asm_function_prologue): Do not use
	nreverse() because it changes the content of original tree list.

2014-02-14  Chung-Ju Wu  <jasonwucj@gmail.com>

	* config/nds32/t-mlibs (MULTILIB_OPTIONS): Fix typo in comment.
	* config/nds32/nds32.c (nds32_merge_decl_attributes): Likewise.

2014-02-14  Chung-Ju Wu  <jasonwucj@gmail.com>

	* config/nds32/nds32.c (nds32_naked_function_p): Follow the
	GNU coding standards.

2014-02-13  Jakub Jelinek  <jakub@redhat.com>

	PR debug/60152
	* dwarf2out.c (gen_subprogram_die): Don't call
	add_calling_convention_attribute if subr_die is old_die.

2014-02-13  Sharad Singhai  <singhai@google.com>

	* doc/optinfo.texi: Fix order of nodes.

2014-02-13  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/sse.md (xop_vmfrcz<mode>2): Generate const0 in
	operands[2], not operands[3].

2014-02-13  Richard Biener  <rguenther@suse.de>

	PR bootstrap/59878
	* doc/install.texi (ISL): Update recommended version to 0.12.2,
	mention the possibility of an in-tree build.
	(CLooG): Update recommended version to 0.18.1, mention the
	possibility of an in-tree build and clarify that the ISL
	bundled with CLooG does not work.

2014-02-13  Jakub Jelinek  <jakub@redhat.com>

	PR target/43546
	* expr.c (compress_float_constant): If x is a hard register,
	extend into a pseudo and then move to x.

2014-02-13  Dominik Vogt  <vogt@linux.vnet.ibm.com>

	* config/s390/s390.c (s390_asm_output_function_label): Fix crash
	caused by bad second argument to warning_at() with -mhotpatch and
	nested functions (e.g. with gfortran).

2014-02-13  Richard Sandiford  <rdsandiford@googlemail.com>

	* opts.c (option_name): Remove "enabled by default" rider.

2014-02-12  John David Anglin  <danglin@gcc.gnu.org>

	* config/pa/pa.c (pa_option_override): Remove auto increment FIXME.

2014-02-12  H.J. Lu  <hongjiu.lu@intel.com>
	    Uros Bizjak  <ubizjak@gmail.com>

	PR target/60151